# This is a virtual workspace.
# One cannot add dependencies here.

[workspace]
members = [
    # Backend.
    "caskeda-common", # Combines all 'common-' libs into one.
    "caskeda-common-language", # Runtime language.
    "caskeda-common-package", # Package format.
    "caskeda-common-plugins", # Runtime extensions.
    
    # Frontends.
    "caskeda-desktop-windows", # Frontend for Windows.
    "caskeda-mobile-android", # Frontend for Android.
]

[profile.dev]
opt-level = 1
